--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,16 +9,15 @@
         </div>
     </div>
     <div class="row">
-        {% for i in range(8) %}
+        {% for movie in movies %}
         <div class="col-lg-3 col-md-6 mb-4">
             <div class="card h-100">
-                <img class="card-img-top" src="http://placehold.it/300x500" alt="">
+                <img class="card-img-top" src="{{ tmdb_image_url(movie.poster_path, 'w780') }}" alt="{{ movie.title }}">
                 <div class="card-body">
-                    <h4 class="card-title">Tytuł filmu</h4>
-                    <p class="card-text">Opis filmu</p>
+                    <h4 class="card-title">{{ movie.title }}</h4>
                 </div>
                 <div class="card-footer text-center">
-                    <a href="#" class="btn btn-primary">Pokaż więcej</a>
+                    <a href="{{ url_for('movie_details', movie_id=movie.id) }}">Pokaż więcej</a>
                 </div>
             </div>
         </div>
