--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,6 +8,19 @@
             <p class="lead">Znajdziesz tutaj tylko najlepsze tytuły!</p>
         </div>
     </div>
+    <div class="col-lg-12 mb-4">
+        <a href="{{ url_for('homepage', list_type="now_playing") }}" class="btn btn-outline-info">Now Playing</a>
+    </div>
+    <div class="col-lg-12 mb-4">
+        <a href="{{ url_for('homepage', list_type="popular") }}" class="btn btn-outline-info">Popular</a>
+    </div>
+    <div class="col-lg-12 mb-4">
+        <a href="{{ url_for('homepage', list_type="upcoming") }}" class="btn btn-outline-info">upcoming</a>
+    </div>
+    <div class="col-lg-12 mb-4">
+        <a href="{{ url_for('homepage', list_type="top_rated") }}" class="btn btn-outline-info">top_rated</a>
+    </div>
+    
     <div class="row">
         {% for movie in movies %}
         <div class="col-lg-3 col-md-6 mb-4">
